@@ -1,15 +1,14 @@
 package com.luckyseven.event.config;
 
-import jakarta.servlet.http.HttpServletRequest;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -18,7 +17,6 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.provisioning.InMemoryUserDetailsManager;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
 import java.util.Collections;
 import java.util.List;
@@ -50,42 +48,39 @@ public class SecurityConfig {
 
         http
                 .cors((cors) -> cors
-                        .configurationSource(new CorsConfigurationSource() {
-                            @Override
-                            public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-                                CorsConfiguration configuration = new CorsConfiguration();
-                                configuration.setAllowedOrigins(
-                                        List.of(
-                                                "http://localhost:8080",
-                                                "http://localhost:5000",
-                                                "https://chuka.kr",
-                                                "http://k10c107.p.ssafy.io:8080",
-                                                "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8081",
-                                                "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8082",
-                                                "http://k10c107.p.ssafy.io:8083",
-                                                "http://k10c107.p.ssafy.io:8084"
-                                        )
-                                );
-                                configuration.setAllowedMethods(Collections.singletonList("*"));
-                                configuration.setAllowCredentials(true);
-                                configuration.setAllowedHeaders(Collections.singletonList("*"));
-                                configuration.setMaxAge(3600L);
-                                configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization", "Refresh-Token"));
+                        .configurationSource(request -> {
+                            CorsConfiguration configuration = new CorsConfiguration();
+                            configuration.setAllowedOrigins(
+                                    List.of(
+                                            "http://localhost:8080",
+                                            "http://localhost:5000",
+                                            "https://chuka.kr",
+                                            "http://k10c107.p.ssafy.io:8080",
+                                            "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8081",
+                                            "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8082",
+                                            "http://k10c107.p.ssafy.io:8083",
+                                            "http://k10c107.p.ssafy.io:8084"
+                                    )
+                            );
+                            configuration.setAllowedMethods(Collections.singletonList("*"));
+                            configuration.setAllowCredentials(true);
+                            configuration.setAllowedHeaders(Collections.singletonList("*"));
+                            configuration.setMaxAge(3600L);
+                            configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization", "Refresh-Token"));
 
-                                return configuration;
+                            return configuration;
 
-                            }
                         }));
         http
-                .csrf((auth) -> auth.disable());
+                .csrf(AbstractHttpConfigurer::disable);
 
         http
-                .formLogin((auth) -> auth.disable());
+                .formLogin(AbstractHttpConfigurer::disable);
 
 //        http
 //                .httpBasic(Customizer.withDefaults());
         http
-                .httpBasic((auth) -> auth.disable());
+                .httpBasic(AbstractHttpConfigurer::disable);
 
         http
                 .authorizeHttpRequests((auth) -> auth
@@ -93,6 +88,7 @@ public class SecurityConfig {
                         .requestMatchers("/", "/swagger-ui/**", "/swagger-resources/**", "/v3/api-docs/**").permitAll()
                         .requestMatchers("/api/v1/events/**", "/api/v1/reviews/**").permitAll()
 //                        .requestMatchers( "/swagger-ui/**").hasRole("ADMIN")
+                        .requestMatchers("/actuator/**").permitAll()
                         .anyRequest().authenticated());
 
         http
